--------------
-software.config: added sections for rdp_classifier, stap_aligner, stap_classifier
-get_pipeline_lists.cgi: now checks for the existance of the path stored in 'temp_space' of ergatis.ini and creates it if it doesn't exist
-Prokaryotic_Annotation_Pipeline: Removed unnecessary variables from pipeline_summary.default.config
-Util: Added check_pipeline_template_configs.pl
-hmmpfam2htab.pl: removes slashes from temp filename
-software.config: removed unused $;HTAB_EXEC$; variable
-peptstats: removed unused parameters in config file (obviously from a component copy)
-stap_aligner: component added
-stap_classifier: component added
-rdp_classifier: component added
-genbank2bsml: new command-line options and bug fixes to support pan-genome analyses
-pangenome_blast_parse.pl, pangenome_query_list.pl: generalized regexes to not fail so much
-installer: added stap_aligner, stap_classifier and rdp_classifier components
-legacy2bsml: added host and rdbms arguments
-lipoprotein_motif: added algorithm, program and programversion to BSML Analysis element
-start_site_curation: Fixed bug where script would fail on a molecule that didn't have any unchanged genes
-ps_scan: linked input sequences to Analysis element in BSML output
-utilities: added check_pipeline_template_configs.pl script
-SF web: added new screenshots

ergatis-v2r8b1-rc2
------------------
-Chado::Gene: Fixed a small bug when applying filters to a gene group
-pipeline_summary: added TRANS_TABLE option to pipeline_summary config
-lipoprotein_motif: fixed a typo in the lipoprotein motif bsml output analysis links
-ps_scan2bsml: now correctly uses the analysis_id option for setting analysis links
-berbtab2bsml: fixed bug in Sequence elements of input fsa. Was marking as Sequence[@molecule='aa']. Changed to 'dna'
-ergatis_installer.pl - removed.  this was a legacy installer that did lots of CVS checkouts, etc. which wouldn't work anymore.